frontend/src/index.scss
/* ... */
#menu-bar {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    &>* {
        flex: 1;
        margin: 0.1em; // using margin instead of gap because of the 0-width element that would produce extra gap
        &:first-child { margin-left: 0 }
        &:last-child { margin-right: 0 }
    }
    & button {
        padding: min(1vh, 0.5em) 0; // avoid wasting too much vertical space, and no need for horizontal padding as we are using flex to grow
    }
}
#searched {
    margin: .2em;
}
#user-panel {
    display:flex;
    flex-direction: column;
    gap: 1em;
    & a>button {
        width: 100%;
    }
}

button label {
    cursor: inherit;
    margin-left: .7em;
}

.dialog-backdrop.working {
    font-size: 5em;
    animation: 1s fade-in;
}
.dialog-content {
    padding: .2em; /* give space for focus outline */
}
.dialog-alert .dialog-content {
    text-align: center;
    & p { text-align: left; display: inline-block; }
}

.dialog {
    min-width: 11em;
    --color: var(--button-bg);
}
.dialog-icon .icon {
    margin-left: -1px; font-size:95%;
    margin-top: 0.4em; // useful for and affecting only img icons
    border-radius: 0.6em 0;
}

#paging {
    position: sticky;
    bottom: 0;
    display: flex;
    gap: .1em;
    background-color: var(--bg);
    padding: 0 0.2em 0.2em;
    &>button { z-index: 1; }
    & button { box-shadow: 0 0 .3em .3em #0003; }
    & #paging-middle {
        padding: 0 0.5em;
        margin: 0 -0.3em;
        display: flex;
        gap: .5em;
        flex: 1;
        overflow-x: auto;
    }
    & #paging-middle>button {
        flex: 1;
        padding-top: 0; padding-bottom: 0; /* reduce vertically in case a horizontal scrolling bar is needed */
    }
    & button {
        background: var(--button-bg);
        text-align: center;
        white-space: nowrap;
        padding: .5em; /* fit more buttons on screen */
    }
}

.upload-toolbar {
    @extend .hide-back;
    position: sticky;
    top: -4px;
}
.upload-progress::before { content: var(--separator); }
.entry-size::after { content: var(--separator) }

.upload-progress {
    min-width: 4em;
    display: inline-block;
    margin-left: 0.5em;
}
.upload-list {
    & td:nth-child(1) { width: 0;  }
    & td:nth-child(2) { text-align: right; width: 0; white-space: nowrap; padding-left: 0.5em; }
    & td:nth-child(3) { padding: .2em .5em; word-break: break-word; }
}

.dialog-login {
    form {
        display: flex;
        flex-direction: column;
        gap: 1.2em;
    }
    label {
        display: block;
        margin-bottom: .5em;
        margin-left: .1em;
    }
}

.miss-perm  { margin: .3em }

.popup-menu-button {
    font-size: .8em; padding: .2em .3em; position: absolute; opacity: .8;
    &:hover { opacity: 1 }
}

.file-dialog .dialog-content { min-width: calc(100% - 1em); } /* effective and nicer on short names  */
.file-dialog .dialog { min-width: 13em; } /* more room for title */
.file-dialog-properties {
    word-break: break-word;
    line-height: 1.5em;
    margin: 0;
    & dt { font-weight: bold; }
    & dd { margin-left: 1.5em; }
}
.file-menu {
    margin-top: 1em;
    padding-top: 1em;
    border-top: 1px solid var(--faint-contrast);

    display: flex;
    flex-direction: column;
    gap: 1em;
    & a {
        & .icon { margin-right: 0.5em; }
        &:hover { @extend .highlightedText }
    }
}
/* ... */

